@@ -16,13 +16,10 @@
 
 package org.gradle.integtests.samples
 
-import org.gradle.api.JavaVersion
+
 import org.gradle.integtests.fixtures.AbstractIntegrationSpec
 import org.gradle.integtests.fixtures.DefaultTestExecutionResult
 import org.gradle.integtests.fixtures.Sample
-import org.gradle.integtests.fixtures.ZincScalaCompileFixture
-import org.gradle.integtests.fixtures.executer.GradleContextualExecuter
-import org.gradle.integtests.fixtures.executer.IntegrationTestBuildContext
 import org.gradle.test.fixtures.file.TestFile
 import org.gradle.test.precondition.Requires
 import org.gradle.test.preconditions.UnitTestPreconditions
@@ -34,7 +31,6 @@ import static org.hamcrest.CoreMatchers.containsString
 class SamplesMixedJavaAndScalaIntegrationTest extends AbstractIntegrationSpec {
 
     @Rule public final Sample sample = new Sample(testDirectoryProvider, 'scala/mixedJavaAndScala')
-    @Rule public final ZincScalaCompileFixture zincScalaCompileFixture = new ZincScalaCompileFixture(executer, testDirectoryProvider)
 
     def setup() {
         executer.withRepositoryMirrors()
@@ -66,13 +62,6 @@ class SamplesMixedJavaAndScalaIntegrationTest extends AbstractIntegrationSpec {
     }
 
     def "can build docs"() {
-        if (GradleContextualExecuter.isDaemon()) {
-            // don't load scala into the daemon as it exhausts permgen
-            return
-        } else if (!IntegrationTestBuildContext.isEmbedded() && !GradleContextualExecuter.isParallel() && !JavaVersion.current().isJava8Compatible()) {
-            executer.withBuildJvmOpts('-XX:MaxPermSize=128m')
-        }
-
         TestFile projectDir = sample.dir.file('groovy')
 
         when:
